[package]
name = "ledger-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Immutable append-only ledger with Merkle-root anchoring"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
thiserror = "1.0"
hex = "0.4"
chrono = "0.4"
ubl-kernel = { path = "../ubl-kernel" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
