[package]
name = "membrana"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sub-millisecond ALLOW/DENY decision service"

[dependencies]
axum.workspace = true
tokio.workspace = true
moka.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ubl-kernel = { path = "../ubl-kernel" }
ledger-engine = { path = "../ledger-engine" }
hex = "0.4"
chrono = "0.4"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
