[package]
name = "policy-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "TDLN DSL to deterministic WASM compiler"

[dependencies]
wasmtime.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ubl-kernel = { path = "../ubl-kernel" }
wasm-encoder = "0.243"

[dev-dependencies]
hex = "0.4"
