[package]
name = "runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Isolated job execution with Receipt generation"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ubl-kernel = { path = "../ubl-kernel" }
wallet = { path = "../wallet" }
thiserror.workspace = true
ed25519-dalek.workspace = true
rand = "0.8"
