[package]
name = "wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Passkey 2-eyes vault for Permit issuance"

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ubl-kernel = { path = "../ubl-kernel" }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
